--- a/src/request/export/Export.css
+++ b/src/request/export/Export.css
@@ -43,7 +43,7 @@ ul.nq-list li > .nq-icon {
 }
 
 .page#recovery-words .recovery-words {
-    height: 39rem;
+    height: 38rem;
     margin: 0;
     position: relative;
     margin: -4rem -4rem -5rem;
